src/objects/Zip_Description__c.object
<CustomObject>
    <fields>
        <fullName>c_area_name_1__c</fullName>
        <label>Area Name 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_area_name_2__c</fullName>
        <label>Area Name 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_area_name_3__c</fullName>
        <label>Area Name 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_area_name__c</fullName>
        <label>Area Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_casino_flag__c</fullName>
        <label>Casino Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_char_1__c</fullName>
        <label>Char 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_char_2__c</fullName>
        <label>Char 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_char_3__c</fullName>
        <label>Char 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_close_compet__c</fullName>
        <label>Close Compet</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_close_prop__c</fullName>
        <label>Close Property</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dma__c</fullName>
        <label>DMA Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dma_desc__c</fullName>
        <label>DMA Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_harrahs_flag__c</fullName>
        <label>Harrahs Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_msa__c</fullName>
        <formula>c_msa_cd__r.c_msa_description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_msa_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSA Code</label>
        <referenceTo>MSA_Code__c</referenceTo>
        <relationshipLabel>Zip Descriptions</relationshipLabel>
        <relationshipName>Zip_Descriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_scf_cd__c</fullName>
        <label>SCF Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_state_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Code</label>
        <referenceTo>State_Province__c</referenceTo>
        <relationshipLabel>Zip Descriptions</relationshipLabel>
        <relationshipName>Zip_Descriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_topprop1__c</fullName>
        <label>Topprop 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_topprop2__c</fullName>
        <label>Topprop 2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_topprop3__c</fullName>
        <label>Topprop 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_flt_1__c</fullName>
        <label>Flt 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_flt_2__c</fullName>
        <label>Flt 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_flt_3__c</fullName>
        <label>Flt 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_latitude__c</fullName>
        <label>Latitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_longitude__c</fullName>
        <label>Longitude</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_sq_miles__c</fullName>
        <label>Square Miles</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_topprop1_2__c</fullName>
        <label>Theo Topprop 1-2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_topprop1_3__c</fullName>
        <label>Theo Topprop 1-3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_topprop1__c</fullName>
        <label>Theo Topprop 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_close_compet_miles__c</fullName>
        <label>Close Compet Miles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_close_prop_dist__c</fullName>
        <label>Close Property Dist</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_int_1__c</fullName>
        <label>Int 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_int_2__c</fullName>
        <label>Int 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_int_3__c</fullName>
        <label>Int 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zip Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>c_state_cd__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>